final changes and running code

--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -55,10 +55,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="MyForumEntities_Org" connectionString="metadata=res://*/MyForum.csdl|res://*/MyForum.ssdl|res://*/MyForum.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\MyForum.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MyForumEntities_2" connectionString="Data Source=aspireggn63\\sql2014;database=MyForum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.EntityClient" />
-    <add name="MyForumEntities" connectionString="metadata=res://*/MyForum.csdl|res://*/MyForum.ssdl|res://*/MyForum.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=aspireggn63\sql2014;database=MyForum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <connectionStrings>   
+    <add name="MyForumEntities" connectionString="metadata=res://*/MyForum.csdl|res://*/MyForum.ssdl|res://*/MyForum.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DPK;database=MyForum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
